--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -13,9 +13,14 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Install dependencies
+      - name: Init, install and add prettier script
         run: |
-          npm ci
+          npm init --yes
+          npm i -D prettier
+          constToFind='\"test\": \"echo \\\"Error: no test specified\\\" && exit 1\"'
+          replacement=',\n\t\"format\": \"prettier --write .\"'
+          combineReplacement="${constToFind}${replacement}"
+          sed -i "s/${constToFind}/${combineReplacement}/g" package.json
       - name: Run prettier
         run: |
           npm run format
