ChatGPT suggestion 3 (hasn't this been already suggested)

--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -17,9 +17,9 @@ jobs:
         run: |
           npm init --yes
           npm i -D prettier
-          constToFind='"test": "echo \"Error: no test specified\" && exit 1"'
+          constToFind='\"test\": \"echo \\\"Error: no test specified\\\" && exit 1\"'
           replacement=',\n\t\"format\": \"prettier --write .\"'
-          combineReplacement="${constToFind}${replacement}"
+          combineReplacement="${constToFind//\\/\\\\}${replacement//\\/\\\\}"
           sed -i "s/${constToFind}/${combineReplacement}/g" package.json
           cat package.json
       - name: Run prettier
