--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -17,10 +17,7 @@ jobs:
         run: |
           npm init --yes
           npm i -D prettier
-          constToFind='\"test\": \"echo \\\"Error: no test specified\\\" && exit 1\"'
-          replacement=',\n\t\"format\": \"prettier --write .\"'
-          combineReplacement="${constToFind//\\/\\\\}${replacement//\\/\\\\}"
-          sed -i "s|${constToFind}|${combineReplacement}|g" package.json
+          jq '.scripts += {"format": "prettier --write ."}' package.json > tmpfile && mv tmpfile package.json
           cat package.json
       - name: Run prettier
         run: |
